# posterize

./: .gitignore  .pre-commit-config.yaml  .vimrc  .vimspector.json  README.md  iterative_main.py  pyproject.toml  temp.py
src/: cluster_numbers.py
src/posterize/: __init__.py  arrays.py  color_attributes.py  color_dist.py  constants.py  convolution.py  defaults.py  fast_main.py  fat_tonys.py  image_arrays.py  image_processing.py  iterative_main.py  layers.py  main.py  main2.py  mono_posterize.py  one_svg_layer.py  palette.py  paths.py  posterization.py  projects.py  quantization.py  rasterize.py  sort_colors.py  stem.py  stem_creator.py  svg_layers.py  time_distortions.py  type_target_image.py
tests/: __init__.py  conftest.py  test_color_attributes.py  test_edge_cases.py  test_glob_image.py  test_golden.py  test_image_processing.py  test_posterize.py  test_quantization.py
tests/resources/: expect_full_color_6_layers.npy  expect_monochrome_6_layers.npy
typings/diskcache/: __init__.pyi  cli.pyi  core.pyi  djangocache.pyi  fanout.pyi  persistent.pyi  recipes.pyi
